[package]
name = "untitled"
version = "0.1.0"
authors = ["Nikolas Virostek <virostek@metaapp.sk>"]
edition = "2018"

[dependencies]
raft = "0.5.0"
#raft = "0.4.0"
prost = "0.5"
regex = "1.1"
env_logger = "0.5"
log = ">0.2"
protobuf = "~2.0-2.2"
bincode = "1.1.3"
serde_derive = "1.0.34"
serde = "1.0.34"
zmq = "0.9.2"
config = "0.9"
crossbeam = "0.7"
rand = "0.7.3"

